--- a/src/_mixins/browser.scss
+++ b/src/_mixins/browser.scss
@@ -1,8 +1,11 @@
 // add browser compatibility style
-@mixin browser-compatible( $property, $value) {
-    $prefixes-by-browser: ("firefox": moz, "safari": webkit, "ie": ms);
-    @each $browser,
-    $engine in $prefixes-by-browser {
+@mixin browser-compatible($property, $value) {
+    $prefixes-by-browser: (
+        "firefox": moz,
+        "safari": webkit,
+        "ie": ms
+    );
+    @each $browser, $engine in $prefixes-by-browser {
         -#{$engine}-#{$property}: $value;
     }
     #{$property}: $value;
