--- a/src/default.scss
+++ b/src/default.scss
@@ -27,120 +27,120 @@
   *
  ********************************************************************************/
 
-@import 'variables.scss';
+@import "variables.scss";
 
 /*========================================================
     [1] CSS Defaults Reset      __reset
 ========================================================*/
 
-@import 'services/defaults.scss';
+@import "services/defaults.scss";
 
 /*========================================================
 [2] Clearfix        __clearfix
 ========================================================*/
 
-@import 'services/clearfix.scss';
+@import "services/clearfix.scss";
 
 /*========================================================
 [3] Base Elements       __base
 ========================================================*/
 
-@import 'services/elements.scss';
+@import "services/elements.scss";
 
 /*========================================================
 [4] Typography        __typography
 ========================================================*/
 
-@import 'fonts/icofont.scss';
-@import 'fonts/lato.scss';
-@import 'fonts/source_sans_pro.scss';
-@import 'services/typography.scss';
+@import "fonts/icofont.scss";
+@import "fonts/lato.scss";
+@import "fonts/source_sans_pro.scss";
+@import "services/typography.scss";
 
 /*========================================================
 [5] Masterpage & Page Layout        __layout
 ========================================================*/
 
-@import 'services/layout.scss';
+@import "services/layout.scss";
 
 /*========================================================
 [6] Menus        __menus
 ========================================================*/
 
-@import 'services/menus.scss';
+@import "services/menus.scss";
 
 /*========================================================
 [7] Pagination        __pagination
 ========================================================*/
 
-@import 'services/pagination.scss';
+@import "services/pagination.scss";
 
 /*========================================================
 [8] Content Items        __content items
 ========================================================*/
 
-@import 'services/content.scss';
+@import "services/content.scss";
 
 /*========================================================
 [9] Common Blocks        __blocks
 ========================================================*/
 
-@import 'services/common.scss';
+@import "services/common.scss";
 
 /*========================================================
 [10] Forms        __forms
 ========================================================*/
 
-@import 'services/forms.scss';
+@import "services/forms.scss";
 
 /*=======================================================
 [11] Tables        __tables
 ========================================================*/
 
-@import 'services/tables.scss';
+@import "services/tables.scss";
 
 /*========================================================
 [12] Standard Listings        __listings
 ========================================================*/
 
-@import 'services/listing.scss';
+@import "services/listing.scss";
 
 /*========================================================
 [13] Thumbnails & Icons        __icons
 ========================================================*/
 
-@import 'services/thumbnails.scss';
+@import "services/thumbnails.scss";
 
 /*===========================================================
 [14] Notifications        __notifications
 ===========================================================*/
 
-@import 'services/notifications.scss';
+@import "services/notifications.scss";
 
 /*========================================================
 [15] Default Classes      __default classes
 ========================================================*/
 
-@import 'services/classes.scss';
+@import "services/classes.scss";
 
 /*========================================================
 [16] Plugin Styles        __plugins
 ========================================================*/
 
-@import 'services/plugins.scss';
+@import "services/plugins.scss";
 
 /*========================================================
 [17] Misc        __misc
 ========================================================*/
 
-@import 'services/misc.scss';
+@import "services/misc.scss";
 
 /* Import All CSS */
 
-@import 'services/animate.scss';
+@import "services/animate.scss";
 
 /*========================================================
 [18] Responsive        __responsive
 ========================================================*/
 
-@import 'services/responsive.scss';
-@import 'services/patch.scss';
+@import "services/responsive.scss";
+@import "services/patch.scss";
