--- a/src/_mixins/list.scss
+++ b/src/_mixins/list.scss
@@ -12,8 +12,7 @@
     border-bottom: 1px solid var(--divider--light);
     @if $flush {
         padding: var(--padd) var(--padd--md);
-    }
-    @else {
+    } @else {
         padding: var(--padd) 0;
     }
     box-sizing: border-box;
@@ -32,7 +31,7 @@
     display: block;
 }
 
-@mixin do-list($wrap, $item, $content, $flush: false, $clear-last: true, $extra:()) {
+@mixin do-list($wrap, $item, $content, $flush: false, $clear-last: true, $extra: ()) {
     // $wrap-extra: map-get($map: $extra, $key: 'wrap');
     // $item-extra: map-get($map: $extra, $key: 'item');
     // $content-extra: map-get($map: $extra, $key: 'content');
@@ -57,8 +56,7 @@
                 }
             }
         }
-    }
-    @else {
+    } @else {
         @include list-wrap($flush);
         #{$item} {
             @include list-item($flush);
@@ -100,8 +98,7 @@ $wrapper-image-size: 40px;
                 height: calc(#{$wrapper-image-size} - (2 * var(--padd--xs)));
             }
         }
-    }
-    @else {
+    } @else {
         img {
             width: calc(#{$wrapper-image-size} - (2 * var(--padd--xs)));
             height: calc(#{$wrapper-image-size} - (2 * var(--padd--xs)));
@@ -111,7 +108,7 @@ $wrapper-image-size: 40px;
 
 @mixin widget-lp_label() {
     color: var(--color--text);
-    font-size: calc((var(--font-size) * 17)/ 20);
+    font-size: calc((var(--font-size) * 17) / 20);
     height: 20px;
     display: inline-block;
     text-overflow: ellipsis;
