--- a/src/base.scss
+++ b/src/base.scss
@@ -1,4 +1,4 @@
-@import 'variables.scss';
+@import "variables.scss";
 
 * {
     margin: 0;
@@ -19,26 +19,32 @@ body {
 
 :root {
     // Color configs
-    --color--primary: #{set-config($color-primary-color, 'color', $sectionColor, 'primaryColor', 'Primary color')};
-    --color--secondary: #{set-config($color-secondary, 'color', $sectionColor, 'secondaryColor', 'Secondary color')};
-    --header-bg-color: #{set-config($color-app, 'color', $sectionColor, 'headerBgColor', 'Header Background Color')};
-    --header-color: #{set-config($color-app, 'color', $sectionColor, 'headingColor', 'Heading Color')};
-    --color--text: #{set-config('#494954', 'color', $sectionColor, 'textColor', 'Text Color')};
-    --color--link: #{set-config('#494954', 'color', $sectionColor, 'linkColor', 'Links Color')};
+    --color--primary: #{set-config($color-primary-color, "color", $sectionColor, "primaryColor", "Primary color")};
+    --color--secondary: #{set-config($color-secondary, "color", $sectionColor, "secondaryColor", "Secondary color")};
+    --header-bg-color: #{set-config($color-app, "color", $sectionColor, "headerBgColor", "Header Background Color")};
+    --header-color: #{set-config($color-app, "color", $sectionColor, "headingColor", "Heading Color")};
+    --color--text: #{set-config("#494954", "color", $sectionColor, "textColor", "Text Color")};
+    --color--link: #{set-config("#494954", "color", $sectionColor, "linkColor", "Links Color")};
     // main bg color
-    --site-bg-color: #{set-config($color-bg, 'color', $sectionColor, 'bodyBg', 'Page background color')};
+    --site-bg-color: #{set-config($color-bg, "color", $sectionColor, "bodyBg", "Page background color")};
     // alt bg color
-    --site-alt-bg-color: #{set-config('#fafafa', 'color', $sectionColor, 'bodyBg', 'Page Alt background color')};
+    --site-alt-bg-color: #{set-config("#fafafa", "color", $sectionColor, "bodyBg", "Page Alt background color")};
     // site text color
-    --site-color: #{set-config('#494954', 'color', $sectionColor, 'bodyColor', 'Site color')};
+    --site-color: #{set-config("#494954", "color", $sectionColor, "bodyColor", "Site color")};
     // main menu link color
-    --menu-color: #{set-config('#91919d', 'color', $sectionColor, 'menuColor', 'Main Menu Color')};
+    --menu-color: #{set-config("#91919d", "color", $sectionColor, "menuColor", "Main Menu Color")};
     // main menu bg color
-    --menu-bg: #{set-config('#fff', 'color', $sectionColor, 'menuBg', 'Main Menu Background Color')};
+    --menu-bg: #{set-config("#fff", "color", $sectionColor, "menuBg", "Main Menu Background Color")};
     // main menu active bg color
-    --menu-active-bg-color: #{set-config('#fff2f3', 'color', $sectionColor, 'activeMenuBgColor', 'Active Menu Background Color')};
+    --menu-active-bg-color: #{set-config(
+            "#fff2f3",
+            "color",
+            $sectionColor,
+            "activeMenuBgColor",
+            "Active Menu Background Color"
+        )};
     // main menu active link color
-    --menu-active-color: #{set-config('#ea535c', 'color', $sectionColor, 'activeMenuColor', 'Active Menu Color')};
+    --menu-active-color: #{set-config("#ea535c", "color", $sectionColor, "activeMenuColor", "Active Menu Color")};
     // Other colors
     --bg-gradient-nope: linear-gradient(to right, rgb(235, 8, 140), rgb(255, 101, 1));
     --bg-gradient-like: linear-gradient(to right, rgb(19, 168, 158), rgb(171, 242, 242));
@@ -79,15 +85,15 @@ body {
 
 :root {
     // Social links
-    --facebook: #{set-config('#', 'text', $sectionSocial, 'facebook', 'Facebook page url')};
-    --twitter: #{set-config('#', 'text', $sectionSocial, 'twitter', 'Twitter profile url')};
-    --pinterest: #{set-config('#', 'text', $sectionSocial, 'pinterest', 'Pinterest profile url')};
-    --instagram: #{set-config('#', 'text', $sectionSocial, 'instagram', 'Instagram profile url')};
-    --tiktok: #{set-config('#', 'text', $sectionSocial, 'tiktok', 'Tiktok profile url')};
-    --youtube-channel: #{set-config('#', 'text', $sectionSocial, 'ytChannel', 'YouTube Channel')};
-    --youtube-video-id: #{set-config('#', 'text', $sectionSocial, 'ytVideoId', 'YouTube Video ID')};
-    --skype: #{set-config('#', 'text', $sectionSocial, 'skype', 'Skype profile url')};
-    --linkedin: #{set-config('#', 'text', $sectionSocial, 'linkedin', 'LinkedIn profile url')};
+    --facebook: #{set-config("#", "text", $sectionSocial, "facebook", "Facebook page url")};
+    --twitter: #{set-config("#", "text", $sectionSocial, "twitter", "Twitter profile url")};
+    --pinterest: #{set-config("#", "text", $sectionSocial, "pinterest", "Pinterest profile url")};
+    --instagram: #{set-config("#", "text", $sectionSocial, "instagram", "Instagram profile url")};
+    --tiktok: #{set-config("#", "text", $sectionSocial, "tiktok", "Tiktok profile url")};
+    --youtube-channel: #{set-config("#", "text", $sectionSocial, "ytChannel", "YouTube Channel")};
+    --youtube-video-id: #{set-config("#", "text", $sectionSocial, "ytVideoId", "YouTube Video ID")};
+    --skype: #{set-config("#", "text", $sectionSocial, "skype", "Skype profile url")};
+    --linkedin: #{set-config("#", "text", $sectionSocial, "linkedin", "LinkedIn profile url")};
 }
 
 :root {
@@ -112,7 +118,8 @@ body {
     --box-shadow-blur: 17px;
     --box-shadow-thickness: 1px;
     --box-shadow-color: rgba(210, 210, 210, 0.4);
-    --box-shadow--hard: 0 var(--box-shadow-dis) var(--box-shadow-blur) var(--box-shadow-thickness) var(--box-shadow-color);
+    --box-shadow--hard: 0 var(--box-shadow-dis) var(--box-shadow-blur) var(--box-shadow-thickness)
+        var(--box-shadow-color);
     --box-shadow: 0 1px 2px rgba(70, 77, 87, 0.08);
     --box-shadow--md: 0 0 20px rgba(70, 77, 87, 0.15);
     --box-shadow--xl: 0 20px 30px rgba(70, 77, 87, 0.1);
@@ -130,7 +137,7 @@ body {
     --avatar-box-shadow: 0 0 0 1px var(--divider);
     --avatar-border: 2px solid transparent;
     --av-size: var(--avatar-normal);
-    --av-margin: calc( 12px + var(--av-size));
+    --av-margin: calc(12px + var(--av-size));
     --av-n-margin: calc(-1 * var(--av-margin));
     --order--top: 100;
     --order--header: var(--order--top);
