--- a/src/common/preloader.scss
+++ b/src/common/preloader.scss
@@ -29,7 +29,7 @@
         &::before,
         &::after {
             position: absolute;
-            content: '';
+            content: "";
             border-radius: 50%;
         }
         &::before {
@@ -74,14 +74,12 @@
     margin-top: 0;
 }
 
-
 /* thickbox 8aa */
 
 .#{$class-prefix}preloader_content_cont {
     width: 30px;
     height: 30px;
 }
-
 
 /* ~thickbox 8aa */
 
@@ -91,7 +89,7 @@
     width: 100%;
     height: 150px;
     &:before {
-        content: '';
+        content: "";
         position: absolute;
         top: -150px;
         left: 0;
