--- a/src/guest.scss
+++ b/src/guest.scss
@@ -1,4 +1,4 @@
-@import 'variables.scss';
+@import "variables.scss";
 * {
     box-sizing: border-box;
 }
@@ -7,12 +7,9 @@ body {
     background-color: #fff;
 }
 
-
 /* ---- Header styles ---- */
 
-
 /* ---- End of the Header styles ---- */
-
 
 /* ---- Console styles ---- */
 
@@ -35,9 +32,9 @@ body {
     -webkit-border-radius: 4px;
     border-radius: 4px;
     border: solid 1px var(--color--secondary);
-    -moz-transition: ease all .5s;
-    -webkit-transition: ease all .5s;
-    transition: ease all .5s;
+    -moz-transition: ease all 0.5s;
+    -webkit-transition: ease all 0.5s;
+    transition: ease all 0.5s;
     text-decoration: none;
     font-family: "Source Sans Pro", HelveticaNeue, Helvetica, Arial, Sans;
 }
@@ -48,7 +45,6 @@ body {
     border-color: transparent;
     text-decoration: none;
 }
-
 
 /* Console Sign in */
 
@@ -70,7 +66,7 @@ body {
     margin: 4px 0;
     vertical-align: top;
     text-decoration: underline;
-    color: #4D4D4D;
+    color: #4d4d4d;
 }
 
 .jnmod_home_page .ow_signin_label:hover {
@@ -100,7 +96,6 @@ body {
 .jnmod_home_page .ow_ico_signin:last-child {
     margin-right: -4px;
 }
-
 
 /* Homepage style */
 
@@ -159,17 +154,25 @@ body {
         font-weight: 700;
     }
     .jnmod_home_page .ow_page_wrap:not(.ow_menu_sticky) .navbar-toggler-icon {
-        background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0, 0, 0, 0.9)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e")
+        background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3e%3cpath stroke='rgba(0, 0, 0, 0.9)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
     }
     .jnmod_home_page .ow_page_wrap:not(.ow_menu_sticky) .ow_header .ow_signin_label {
         color: #fff;
     }
-    .jnmod_home_page .ow_page_wrap:not(.ow_menu_sticky) .ow_header .ow_console_button.ow_console_item a.ow_console_item_link {
+    .jnmod_home_page
+        .ow_page_wrap:not(.ow_menu_sticky)
+        .ow_header
+        .ow_console_button.ow_console_item
+        a.ow_console_item_link {
         color: var(--color--primary);
         background: #fff;
         border: solid 1px transparent;
     }
-    .jnmod_home_page .ow_page_wrap:not(.ow_menu_sticky) .ow_header .ow_console_button.ow_console_item a.ow_console_item_link:hover {
+    .jnmod_home_page
+        .ow_page_wrap:not(.ow_menu_sticky)
+        .ow_header
+        .ow_console_button.ow_console_item
+        a.ow_console_item_link:hover {
         color: #fff;
         background: var(--color--primary);
         border-color: var(--color--secondary);
@@ -180,9 +183,7 @@ body {
     margin-top: 50px;
 }
 
-
 /* End homepage styles */
-
 
 /*Screenshots app*/
 
@@ -197,15 +198,14 @@ body {
 
 #screenshotss .screen_img {
     padding: 5px;
-    -moz-box-shadow: 0px 8px 20px -8px rgba(0, 0, 0, .4);
-    -webkit-box-shadow: 0px 8px 20px -8px rgba(0, 0, 0, .4);
-    box-shadow: 0px 8px 20px -8px rgba(0, 0, 0, .4);
+    -moz-box-shadow: 0px 8px 20px -8px rgba(0, 0, 0, 0.4);
+    -webkit-box-shadow: 0px 8px 20px -8px rgba(0, 0, 0, 0.4);
+    box-shadow: 0px 8px 20px -8px rgba(0, 0, 0, 0.4);
 }
 
 .screen_img img {
     margin: auto;
 }
-
 
 /*Suck*/
 
@@ -266,7 +266,6 @@ body {
     line-height: 36px;
 }
 
-
 /*--------------------------------------------------------------
 # Call to action
 --------------------------------------------------------------*/
@@ -283,8 +282,8 @@ body {
 }
 
 #call-to-action-area:after {
-    background: rgba(68, 68, 68, .1);
-    content: '';
+    background: rgba(68, 68, 68, 0.1);
+    content: "";
     height: 100%;
     position: absolute;
     width: 100%;
@@ -313,7 +312,6 @@ body {
 .call-to-action {
     margin: 60px 0px 10px;
 }
-
 
 /*--------------------------------------------------------------
 # About
@@ -379,12 +377,11 @@ body {
     font-size: 24px;
 }
 
-
 /* ---- Form Elements styles ---- */
 
-input[type=text],
-input[type=email],
-input[type=password],
+input[type="text"],
+input[type="email"],
+input[type="password"],
 select {
     width: 100%;
     height: 50px;
@@ -401,9 +398,15 @@ select {
     border-radius: 0px;
     -moz-border-radius: 0px;
     -webkit-border-radius: 0px;
-    -webkit-box-shadow: 0 1px rgb(255 255 255 / 6%), inset 0 1px 2px rgb(0 0 0 / 6%);
-    -moz-box-shadow: 0 1px rgba(255, 255, 255, 0.06), inset 0 1px 2px rgba(0, 0, 0, 0.06);
-    box-shadow: 0 1px rgb(255 255 255 / 6%), inset 0 1px 2px rgb(0 0 0 / 6%);
+    -webkit-box-shadow:
+        0 1px rgb(255 255 255 / 6%),
+        inset 0 1px 2px rgb(0 0 0 / 6%);
+    -moz-box-shadow:
+        0 1px rgba(255, 255, 255, 0.06),
+        inset 0 1px 2px rgba(0, 0, 0, 0.06);
+    box-shadow:
+        0 1px rgb(255 255 255 / 6%),
+        inset 0 1px 2px rgb(0 0 0 / 6%);
 }
 
 input,
@@ -455,7 +458,7 @@ input[type="checkbox" i]:checked::before {
     width: 24px;
     height: 24px;
     position: absolute;
-    content: '\2716';
+    content: "\2716";
     display: inline-block;
     font-size: 20.66667px;
     text-align: center;
@@ -466,7 +469,7 @@ input[type="radio" i]:checked::before {
     width: 24px;
     height: 25px;
     position: absolute;
-    content: '\2022';
+    content: "\2022";
     display: inline-block;
     font-size: 50.66667px;
     text-align: center;
@@ -476,15 +479,15 @@ input[type="radio" i]:checked::before {
 input[type="checkbox" i]:checked::after,
 input[type="radio" i]:checked::after {
     background: #b0b3bd;
-    content: '';
+    content: "";
     display: block;
     position: relative;
     z-index: 100;
 }
 
-input[type=file]:focus,
-input[type=checkbox]:focus,
-input[type=radio]:focus,
+input[type="file"]:focus,
+input[type="checkbox"]:focus,
+input[type="radio"]:focus,
 .btn.active.focus,
 .btn.active:focus,
 .btn.focus,
@@ -493,7 +496,6 @@ input[type=radio]:focus,
 .btn:focus {
     outline: none;
 }
-
 
 /* Button styles */
 
@@ -537,7 +539,7 @@ a.cta-btn {
     color: #000;
     text-decoration: none;
     margin-bottom: 20px;
-    transition: .3s;
+    transition: 0.3s;
     border: 2px solid #fff;
     font-size: 20px;
 }
@@ -618,9 +620,7 @@ a.cta-btn.invert {
     background-color: #555;
 }
 
-
 /* End button styles */
-
 
 /*Registration Page*/
 
@@ -651,10 +651,11 @@ a.cta-btn.invert {
     .base_user_join .ow_reg_canvas .ow_page {
         padding-bottom: 30px;
     }
-    .base_user_join input[type=submit],
-    .base_user_join input[type=button] {}
-    .base_user_join input[type=submit]:hover,
-    .base_user_join input[type=button]:hover {
+    .base_user_join input[type="submit"],
+    .base_user_join input[type="button"] {
+    }
+    .base_user_join input[type="submit"]:hover,
+    .base_user_join input[type="button"]:hover {
         animation: pulse3 1s;
     }
 }
@@ -706,7 +707,7 @@ a.cta-btn.invert {
 
 .nuesignup button,
 .ow_jnmod_btncheck_group .ow_jnmod_btn_wrap {
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     border: 1px solid #d7d7d7;
     width: 49%;
     padding: 10px 0;
@@ -723,7 +724,7 @@ a.cta-btn.invert {
     cursor: pointer;
 }
 
-.ow_jnmod_btncheck_group .ow_jnmod_btn_wrap input[type=checkbox] {
+.ow_jnmod_btncheck_group .ow_jnmod_btn_wrap input[type="checkbox"] {
     position: absolute;
     top: 0;
     left: 0;
@@ -740,7 +741,7 @@ a.cta-btn.invert {
     width: 24px;
     height: 24px;
     position: absolute;
-    content: '\2716';
+    content: "\2716";
     display: inline-block;
     font-size: 20.66667px;
     text-align: center;
@@ -750,10 +751,10 @@ a.cta-btn.invert {
 
 .nuesignup .btn.selected {
     color: var(--color--primary);
-    opacity: .8;
+    opacity: 0.8;
 }
 
-.nuesignup .btn.selected input[type=checkbox] {
+.nuesignup .btn.selected input[type="checkbox"] {
     border: 1px solid var(--color--primary);
 }
 
@@ -780,9 +781,9 @@ a.cta-btn.invert {
     background: var(--color--secondary);
     border: solid 1px var(--color--primary);
     color: #fff;
-    -moz-transition: ease all .5s;
-    -webkit-transition: ease all .5s;
-    transition: ease all .5s;
+    -moz-transition: ease all 0.5s;
+    -webkit-transition: ease all 0.5s;
+    transition: ease all 0.5s;
     background-repeat: no-repeat;
     background-position: right center;
 }
@@ -808,7 +809,6 @@ a.cta-btn.invert {
     margin-top: -25px;
     vertical-align: middle;
 }
-
 
 /* Console winks icon */
 
